# PetFriends_testing_API

./: README.md  api.py  pyproject.toml  settings.py
tests/: test_pet_friends.py  test_pet_friends_params.py
