[tool.poetry]
name = "PetFriends_testing_API"
version = "0.1.0"
description = ""
authors = ["ElenaS <lenin_85.85@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
